Flowmini/flowmini_v24_explicit_ast/examples/pass/abi_struct_demo.flow
import "../../std/abi/testabi.flow"

program abi_struct_demo

main {
    p : Point({x:10, y:32})
    q : Point({x:4, y:2})
    result : c_int(0)

    point_sum(p) -> result
    print result

    point_weighted_sum(q) -> result
    print result
}
