Flowmini/flowmini_v24_explicit_ast/examples/fail/bad_import_main.flow
import "../../std/main_bad.flow"

program bad_import_main

main {
    one : int(1)
    print one
}
